# libgrape-lite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  GraphalyticsReport.md  LICENSE  NOTICE.txt  Performance.md  README.md  annotated.html  atomic__ops_8h.html  classThreadPool-members.html  classThreadPool.html  classes.html  classgrape_1_1AdjList-members.html  classgrape_1_1AdjList.html  classgrape_1_1AdjList_1_1const__iterator-members.html  classgrape_1_1AdjList_1_1const__iterator.html  classgrape_1_1AdjList_1_1iterator-members.html  classgrape_1_1AdjList_1_1iterator.html  classgrape_1_1Array-members.html  classgrape_1_1Array.html  classgrape_1_1Array_3_01EmptyType_00_01__Alloc_01_4-members.html  classgrape_1_1Array_3_01EmptyType_00_01__Alloc_01_4.html  classgrape_1_1AutoAppBase-members.html  classgrape_1_1AutoAppBase.html  classgrape_1_1AutoParallelMessageManager-members.html  classgrape_1_1AutoParallelMessageManager.html  classgrape_1_1AutoWorker-members.html  classgrape_1_1AutoWorker.html  classgrape_1_1BasicEFileFragmentLoader-members.html  classgrape_1_1BasicEFileFragmentLoader.html  classgrape_1_1BasicFragmentLoader-members.html  classgrape_1_1BasicFragmentLoader.html  classgrape_1_1BasicFragmentLoaderBase-members.html  classgrape_1_1BasicFragmentLoaderBase.html  classgrape_1_1BasicFragmentLoader_3_01FRAG__T_00_01PARTITIONER__T_00_01IOADAPTOR__T_00_01typenam8d49331e3f90045f1ce7948bb1a0221c.html  classgrape_1_1BasicFragmentLoader_3_01FRAG__T_00_01PARTITIONER__T_00_01IOADAPTOR__T_00_01typenamb0834b739ffae265bf7c6ac1e6974440.html  (+666 more)
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: feature_request.md  questions_support.md
.github/workflows/: build-doc.yml  c-cpp.yml  cuda.yml
benchmark/: eval.sh  eval_base.sh  eval_grape.sh  eval_groute.sh  eval_gum.sh  eval_gunrock.sh  expr_gunrock.sh
cmake/: FindGTest.cmake  FindJemalloc.cmake  FindNCCL.cmake  FindORTools.cmake  FindRdkafka.cmake
dataset/: README.md  common.mk  p2p-31-BFS  p2p-31-BFS-directed  p2p-31-CDLP  p2p-31-LCC  p2p-31-PR  p2p-31-PR-directed  p2p-31-SSSP  p2p-31-SSSP-directed  p2p-31-WCC  p2p-31.e  p2p-31.e.mutable_base  p2p-31.e.mutable_delta  p2p-31.v  p2p-Gnutella31.e
dataset/large/: Makefile  associate_weights.py  common.mk  networkrepo.mk  ufl.mk
docker/: Dockerfile
examples/: IPC.h  d2ud.cpp  flags.cc  flags.h  lux_convert.cc  pc_queue.h  run_app.cu  run_app.h  test.cu  timer.h
examples/analytical_apps/: README.md  app_config.h  d2ud.cc  d2ud.h  flags.cc  flags.h  gen_updated.cc  ingress.cc  ingress.h  mutate_benchmark.cc  mutate_benchmark.h  mutate_benchmark_flags.cc  mutate_benchmark_flags.h  run_app.cc  run_app.h  run_app_opt.h  run_app_vc.h  run_cuda_app.cu  run_cuda_app.h  run_grin_app.cc  run_grin_app.h  timer.h  tornado.h  tornado_pagerank.cc  tornado_php.cc  utils.h
examples/gnn_sampler/: README.md  append_only_edgecut_fragment.h  flags.h  fragment_indices.h  kafka_consumer.h  kafka_producer.h  run_sampler.cc  sampler.h  sampler_context.h  util.h
expr/: associate_weights.py  change_weight.py  d2ud.py  delta_g.py  enlarge.py  gen.py  gen1.py  gen_change_weight.sh  gen_v.py  max_out_degree.py  process_dataset.sh  run.py  scalability.py  simple_gen.py  wiki.py
grape/: config.h  grape.h  types.h  util.h
grape/app/: app_base.h  auto_app_base.h  batch_shuffle_app_base.h  context_base.h  gather_scatter_app_base.h  inc_app_base.h  ingress_app_base.h  mutation_context.h  parallel_app_base.h  traversal_app_base.h  vc_app_base.h  vertex_data_context.h  void_context.h
grape/communication/: communicator.h  shuffle.h  sync_comm.h
grape/fragment/: basic_efile_fragment_loader.h  basic_fragment_loader.h  basic_fragment_loader_base.h  basic_fragment_loader_beta.h  basic_fragment_mutator.h  basic_local_fragment_loader.h  basic_local_fragment_loader_beta.h  basic_rb_fragment_loader.h  basic_rb_fragment_loader_beta.h  basic_vc_ds_fragment_loader.h  basic_vc_fragment_loader.h  csr_edgecut_fragment_base.h  e_fragment_loader.h  edgecut_fragment_base.h  ev_fragment_loader.h  ev_fragment_mutator.h  ev_fragment_rebalance_loader.h  fragment_base.h  id_parser.h  immutable_edgecut_fragment.h  immutable_vertexcut_fragment.h  inc_fragment_builder.h  loader.h  mutable_edgecut_fragment.h  partitioner.h  rebalancer.h  vc_fragment_loader.h
grape/graph/: adj_list.h  de_mutable_csr.h  edge.h  hashmap_indexer.h  hashmap_indexer_impl.h  id_indexer.h  immutable_csr.h  mutable_csr.h  mutable_csr_impl.h  perfect_hash_indexer.h  vertex.h
grape/io/: io_adaptor_base.h  line_parser_base.h  local_io_adaptor.cc  local_io_adaptor.h  tsv_line_parser.h
grape/parallel/: async_message_manager.h  auto_parallel_message_manager.h  batch_shuffle_message_manager.h  parallel.h  (+14 more)
grape_gpu/: config.h  grape_gpu.h
grin/: edgecut_fragment_base.h  fragment_base.h  grin_csr_edgecut_fragment_base.h  grin_edgecut_fragment_base.h  grin_fragment_base.h  grin_immutable_edgecut_fragment.h  immutable_edgecut_fragment.h  predefine.h
ldbc_driver/: .gitignore  README.md  pom.xml  run_ldbc.sh
ldbc_driver/src/main/c/: CMakeLists.txt
misc/: Makefile  app_tests.sh  cdlp.py  count_degree.py  count_self_cycle.py  cpplint.py  cuda_app_tests.sh  doc-config  eps_check.cc  ev2mtx.sh  lcc.py  pr.py  pr_out.py  sampler_test.sh  sssp_bfs.py  sssp_freq_hist.py  top_od.py  vertex_map_tests.cc  wcc.py  wcc_check.cc
run/: compile-flash.sh  compile.sh  format.sh  host_file  txt2bin.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+27 more)
src/: flash.cpp
tests/: load_tests.cc  mutable_fragment_tests.cc  mutate_tests.cc  vertex_map_tests.cc  vertex_map_unit_tests.cc
(+382 files in other folders)
